MEM-430 Fixing Firefox Issue
Fixed the display of keywords (broken in commit 47f9e371ddf96368d8daf5e23e9e9dee4b2d1df9)

--- a/modules/core/client/scss/components/file-browser.scss
+++ b/modules/core/client/scss/components/file-browser.scss
@@ -90,6 +90,7 @@ a.icon-btn {
 
     span.value {
         @include flex(1 1 auto);
+        word-break: break-all;
     }
 
     ul.value {
